Add the data_type workspace member

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["crates/*", "crates/primitive_types"]
+members = ["crates/*", "crates/primitive_types", "crates/data_types"]
 default-members = ["crates/smart_pointers"]
 resolver = "2"
 
