--- a/crates/traits/Cargo.toml
+++ b/crates/traits/Cargo.toml
@@ -7,3 +7,4 @@ authors.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rand = "0.9.0"
